--- a/ZinaoCraft/ZinaoCraft.csproj
+++ b/ZinaoCraft/ZinaoCraft.csproj
@@ -12,7 +12,7 @@
 		<Content Include="Shaders\**">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</Content>
-		<Content Include="textures\**">
+		<Content Include="Textures\**">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</Content>
 	</ItemGroup>
